--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,7 @@ env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-D warnings"
 
+jobs:
   build_fmt_lint:
     name: Build, check format and apply linter
     runs-on: ubuntu-latest
@@ -26,7 +27,7 @@ env:
           toolchain: nightly
           override: true
           target: thumbv6m-none-eabi 
-      - name: Cargo build
+      - name: Cargo check
         uses: actions-rs/cargo@v1
         with:
           command: check
