Add name to step

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,7 @@ jobs:
           command: clippy
           args: -- -D warnings
       - run: rustup component add rustfmt
+      - name: Cargo fmt
         uses: actions-rs/cargo@v1
         with:
           command: fmt
