--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   general:
-    name: Build clippy and rustfmt
+    name: Build, clippy and rustfmt
     runs-on: ubuntu-latest
     steps:
       - name: arm-none-eabi-gcc
@@ -30,7 +30,7 @@ jobs:
       - name: Cargo build
         uses: actions-rs/cargo@v1
         with:
-          command: check
+          command: build
       - run: rustup component add clippy
       - name: Cargo clippy
         uses: actions-rs/cargo@v1
