--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
+          args: --release
       - run: rustup component add clippy
       - name: Cargo clippy
         uses: actions-rs/cargo@v1
