--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "rust-app"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["yhql"]
 edition = "2021"
 
 [dependencies]
-nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
-nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
+ledger_device_sdk = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git" }
+ledger_device_ui_sdk = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git" }
 
 [profile.release]
 opt-level = 'z'
 lto = true
 
 [features]
-pending_review_screen = ["nanos_sdk/pending_review_screen"]
+pending_review_screen = ["ledger_device_sdk/pending_review_screen"]
 
 [package.metadata.ledger]
 curve = ["secp256k1"]
