--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 ledger_device_sdk = {git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", version = "1.1.0"}
-ledger_secure_sdk_sys = "1.0.1"
+ledger_secure_sdk_sys = {git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", version = "1.0.2"}
 include_gif = {git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", version = "1.0.1"}
 serde = {version="1.0.192", default_features = false, features = ["derive"]}
 serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core"}
