--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["yhql", "agrojean-ledger"]
 edition = "2021"
 
 [dependencies]
-ledger_device_sdk = { version="1.10.1", features = ["heap"] }
+ledger_device_sdk = { version="1.10.2", features = ["heap"] }
 include_gif = "1.1.0"
 serde = {version="1.0.192", default_features = false, features = ["derive"]}
 serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core"}
@@ -37,3 +37,6 @@ icon = "crab_32x32.gif"
 
 [package.metadata.ledger.flex]
 icon = "crab_40x40.gif"
+
+[patch.crates-io]
+ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
