--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,7 +9,7 @@ build-std = ["core", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
 
 # By default, heap size is enforced to 8192 bytes.
-# Recommended values are [2048, 4096, 8192, 16384, 24576]
-# Uncomment the following lines to set the heap size 
+# Authorized values are [2048, 4096, 8192, 16384, 24576]
+# Uncomment the following lines to set the heap size to 4096 bytes for instance
 #[env]
-#HEAP_SIZE = "8192"
+#HEAP_SIZE = "4096"
