Update build_and_functional_tests.yml comment

--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -5,7 +5,8 @@ name: Build and run functional tests using ragger through reusable workflow
 # resulting binaries.
 # It then calls another reusable workflow to run the Ragger tests on the compiled application binary.
 #
-# While this workflow is optional, having functional testing on your application is mandatory and this workflow and
+# The build part of this workflow is mandatory, this ensures that the app will be deployable in the Ledger App Store.
+# While the test part of this workflow is optional, having functional testing on your application is mandatory and this workflow and
 # tooling environment is meant to be easy to use and adapt after forking your application
 
 on:
