--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "app-boilerplate-rust"
-version = "1.6.2"
-authors = ["yhql", "agrojean-ledger"]
+name = "app-conflux"
+version = "0.1.0"
+authors = ["Pana"]
 edition = "2021"
 
 [dependencies]
@@ -23,8 +23,8 @@ pending_review_screen = []
 [package.metadata.ledger]
 curve = ["secp256k1"]
 flags = "0"
-path = ["44'/1'"]
-name = "Rust Boilerplate"
+path = ["44'/503'"]
+name = "Conflux"
 
 [package.metadata.ledger.nanox]
 icon = "crab_14x14.gif"
