--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json
 hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
 numtoa = "0.2.4"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+alloy-primitives = { version = "0.8.10", default-features = false, features = ["rlp"] }
 
 [profile.release]
 opt-level = 'z'
