--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,16 @@ hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc
 numtoa = "0.2.4"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 alloy-primitives = { version = "0.8.10", default-features = false, features = ["rlp"] }
+alloy-rlp = { version = "0.3.9", default-features = false, features = ["derive"] }
+bytes = { version = "1.8.0", default-features = false, features = ["serde"] }
+rustc-hex = { version = "2.1.0", default-features = false }
 
 [profile.release]
 opt-level = 'z'
 lto = true
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
 
 [features]
 default = ["pending_review_screen"]
