--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json
 hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
 numtoa = "0.2.4"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
-alloy-primitives = { version = "0.8.10", default-features = false, features = ["rlp"] }
-alloy-rlp = { version = "0.3.9", default-features = false, features = ["derive"] }
-bytes = { version = "1.8.0", default-features = false, features = ["serde"] }
+ethereum-types = { version = "0.15.1", default-features = false, features = ["rlp"] }
+rlp = { version = "0.6.1", default-features = false, features = ["derive"] }
+bytes = { version = "1.8.0", default-features = false, features = [] }
 rustc-hex = { version = "2.1.0", default-features = false }
 
 [profile.release]
