Disallow references to static mut

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,10 @@ icon = "crab_32x32.gif"
 
 [package.metadata.ledger.flex]
 icon = "crab_40x40.gif"
+
+[patch.crates-io]
+ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
+include_gif = { path = "../ledger-device-rust-sdk/include_gif" }
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }
