--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "app-boilerplate-rust"
-version = "1.6.3"
+version = "1.7.0"
 authors = ["Ledger"]
 edition = "2021"
 
 [dependencies]
-ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
+ledger_device_sdk = "1.21.0"
 include_gif = "1.2.0"
 serde = { version="1.0.192", default-features = false, features = ["derive"] }
 serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
