--- a/.github/workflows/coding_style_checks.yml
+++ b/.github/workflows/coding_style_checks.yml
@@ -16,6 +16,6 @@ on:
 jobs:
   check_linting:
     name: Check linting using the reusable workflow
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_lint.yml@v1
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_lint.yml@debian
     with:
       source: './src'
