Fix Nano (S+ and X) NBGL glyph

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,6 +3,8 @@ runner = "speculos -a=1 --model=nanosp"
 
 [build]
 target = "flex"
+# Uncomment the line below to generate a map file
+# rustflags = ["-Clink-args=-Map=app.map"]
 
 [unstable]
 build-std = ["core", "alloc"]
