Update Rust SDK + icons + snapshots

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,10 +42,7 @@ icon = "icons/crab_32x32.gif"
 icon = "icons/crab_40x40.gif"
 
 [package.metadata.ledger.apex_p]
-icon = "crab_14x14.gif"
+icon = "crab_32x32.png"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }
-
-[patch.crates-io]
-ledger_device_sdk = {path = "../ledger-device-rust-sdk/ledger_device_sdk"}
