--- a/.github/workflows/python_tests_checks.yml
+++ b/.github/workflows/python_tests_checks.yml
@@ -1,6 +1,8 @@
 name: Checks on the Python tests
+permissions:
+  contents: read
 
-# This workflow performs some checks on the Python client used by the Boilerplate tests
+# This workflow performs some checks on the Python client used by the ragger tests
 # It is there to help us maintain a level of quality in our codebase and does not have to be kept on forked
 # applications.
 
@@ -14,31 +16,13 @@ on:
   pull_request:
 
 jobs:
-
   lint:
-    name: Boilerplate client linting
-    runs-on: ubuntu-latest
-    steps:
-    - name: Clone
-      uses: actions/checkout@v3
-    - name: Installing PIP dependencies
-      run: |
-        pip install pylint
-        pip install --extra-index-url https://test.pypi.org/simple/ -r tests/requirements.txt
-    - name: Lint Python code
-      run: |
-        pylint --rc tests/setup.cfg tests/application_client/
+    name: Call Ledger Python linters
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_python_checks.yml@v1
+    with:
+      run_linter: pylint
+      run_type_check: true
+      src_directory: tests/application_client
+      setup_directory: tests
+      req_directory: tests
 
-  mypy:
-    name: Type checking
-    runs-on: ubuntu-latest
-    steps:
-    - name: Clone
-      uses: actions/checkout@v3
-    - name: Installing PIP dependencies
-      run: |
-        pip install mypy
-        pip install --extra-index-url https://test.pypi.org/simple/ -r tests/requirements.txt
-    - name: Mypy type checking
-      run: |
-        mypy tests/application_client/
