--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ numtoa = "0.2.4"
 
 [build-dependencies]
 image = "0.25.7"
+serde_json = "1.0.145"
 
 [features]
 default = ["ledger_device_sdk/nano_nbgl"]
@@ -41,3 +42,6 @@ icon = "icons/crab_32x32.png"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }
+
+[patch.crates-io]
+ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
