adding artifactory registry

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -15,6 +15,9 @@ lto = true
 build-std = ["core", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
 
+[registries.artifactory]
+index = "https://jfrog.ledgerlabs.net/artifactory/api/pypi/embedded-apps-cargo-prod-green"
+
 # By default, heap size is enforced to 8192 bytes.
 # Authorized values are [2048, 4096, 8192, 16384, 24576]
 # Uncomment the following lines to set the heap size to 4096 bytes for instance
