--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -25,6 +25,8 @@ on:
       - master
       - main
       - develop
+    tag:
+      - '*'
   pull_request:
 
 jobs:
@@ -42,3 +44,15 @@ jobs:
     with:
       download_app_binaries_artifact: "compiled_app_binaries"
       regenerate_snapshots: ${{ inputs.golden_run == 'Open a PR' }}
+
+  deploy:
+    name: Build and deploy app-boilerplate-rust
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_crates_deployment.yml@mbr/reusable-crates-deployment
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    with:
+      package_name: app-boilerplate-rust
+      jfrog_deployment: true
+      release: true
+      publish: true
+    secrets:
+      cargo_token: ${{ secrets.CARGO_ARTIFACTORY_TOKEN }}
